--- a/training model.ipynb
+++ b/training model.ipynb
@@ -112,19 +112,19 @@
    "outputs": [],
    "source": [
     "def mediapipe_detection(image, model):\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)  # Convert BGR to RGB\n",
-    "    image.flags.writeable = False  # image as not writeable to improve performance\n",
-    "    results = model.process(image)  # detection\n",
-    "    image.flags.writeable = True  # Mark image as writeable\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)  # Convert back to BGR\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) \n",
+    "    image.flags.writeable = False  \n",
+    "    results = model.process(image)  \n",
+    "    image.flags.writeable = True  \n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)  \n",
     "    return image, results\n",
     "\n",
     "def draw_landmarks(image, results):\n",
-    "    # Draw pose landmarks\n",
+    "    # pose landmarks\n",
     "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS)\n",
-    "    # Draw left hand landmarks\n",
+    "    # left hand landmarks\n",
     "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS)\n",
-    "    # Draw right hand landmarks\n",
+    "    # right hand landmarks\n",
     "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS)\n"
    ]
   },
@@ -137,17 +137,17 @@
    "outputs": [],
    "source": [
     "def draw_styled_landmarks(image, results):'\n",
-    "    # Draw pose connections\n",
+    "    # pose connections\n",
     "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS,\n",
     "                             mp_drawing.DrawingSpec(color=(80,22,10), thickness=2, circle_radius=4),\n",
     "                             mp_drawing.DrawingSpec(color=(80,44,121), thickness=2, circle_radius=2)\n",
     "                             )\n",
-    "    # Draw left hand connections\n",
+    "    # left hand connections\n",
     "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
     "                             mp_drawing.DrawingSpec(color=(121,22,76), thickness=2, circle_radius=4),\n",
     "                             mp_drawing.DrawingSpec(color=(121,44,250), thickness=2, circle_radius=2)\n",
     "                             )\n",
-    "    # Draw right hand connections\n",
+    "    # right hand connections\n",
     "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
     "                             mp_drawing.DrawingSpec(color=(245,117,66), thickness=2, circle_radius=4),\n",
     "                             mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2)\n",
@@ -192,62 +192,59 @@
     }
    ],
    "source": [
-    "#/content/drive/MyDrive/m_data\n",
-    "# Install OpenCV\n",
+    "\n",
     "!pip install opencv-python\n",
     "\n",
-    "# Import required libraries\n",
+    "\n",
     "import cv2\n",
     "import os\n",
     "\n",
-    "# Path to the folder containing video files\n",
-    "VIDEO_FOLDER_PATH = '/content/drive/MyDrive/train'  # Change this to the path of your video folder\n",
     "\n",
-    "# Path to save the extracted frames\n",
-    "FRAME_OUTPUT_PATH = '/content/path_to_save_extracted_frames'  # Change this to your desired output path\n",
+    "VIDEO_FOLDER_PATH = '/content/drive/MyDrive/train' \n",
     "\n",
-    "# Ensure the output path exists\n",
+    "\n",
+    "FRAME_OUTPUT_PATH = '/content/path_to_save_extracted_frames'  \n",
+    "\n",
+    "\n",
     "os.makedirs(FRAME_OUTPUT_PATH, exist_ok=True)\n",
     "\n",
-    "# Iterate through all video files in the folder\n",
+    "\n",
     "for video_file in os.listdir(VIDEO_FOLDER_PATH):\n",
     "    video_path = os.path.join(VIDEO_FOLDER_PATH, video_file)\n",
     "\n",
-    "    # Check if the file is a video (optional: you can add more video file extensions)\n",
     "    if video_file.endswith(('.mp4', '.avi', '.mov', '.mkv')):\n",
     "\n",
-    "        # Create a directory for this video file\n",
-    "        video_name = os.path.splitext(video_file)[0]  # Get the video name without extension\n",
+    "       \n",
+    "        video_name = os.path.splitext(video_file)[0]  \n",
     "        video_output_dir = os.path.join(FRAME_OUTPUT_PATH, video_name)\n",
     "        os.makedirs(video_output_dir, exist_ok=True)\n",
     "\n",
-    "        # Create a VideoCapture object to read the video\n",
     "        cap = cv2.VideoCapture(video_path)\n",
     "\n",
-    "        # Check if the video was opened successfully\n",
+    "       \n",
     "        if not cap.isOpened():\n",
     "            print(f\"Error: Could not open video {video_file}.\")\n",
     "            continue\n",
     "\n",
-    "        # Frame index\n",
+    "        \n",
     "        frame_idx = 0\n",
     "\n",
     "        while cap.isOpened():\n",
-    "            ret, frame = cap.read()  # Read a frame\n",
+    "            ret, frame = cap.read()  \n",
     "\n",
     "            if not ret:\n",
-    "                break  # Break the loop if there are no frames left\n",
+    "                break  \n",
     "\n",
-    "            # Generate the frame's filename\n",
-    "            frame_filename = f\"{video_name}_frame{frame_idx:04d}.jpg\"  # Saves as video_frame0000.jpg, video_frame0001.jpg, etc.\n",
+    "            \n",
+    "            frame_filename = f\"{video_name}_frame{frame_idx:04d}.jpg\"  \n",
     "            frame_output_path = os.path.join(video_output_dir, frame_filename)\n",
     "\n",
-    "            # Save the frame as an image\n",
+    "            \n",
     "            cv2.imwrite(frame_output_path, frame)\n",
     "\n",
-    "            frame_idx += 1  # Increment the frame index\n",
+    "            frame_idx += 1  \n",
     "\n",
-    "        # Release the VideoCapture object\n",
+    "       \n",
     "        cap.release()\n",
     "\n",
     "print(f\"Frame extraction complete. All frames saved to {FRAME_OUTPUT_PATH}.\")"
@@ -302,20 +299,20 @@
     "import mediapipe as mp\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "\n",
-    "# Path where frames are saved\n",
+    "\n",
     "DATA_PATH = '/content/path_to_save_extracted_frames'\n",
     "actions = np.array([\"absent\", \"baby\", \"bacteria\", \"cabbage\", \"call\", \"dark\", \"face\", \"fall\"]) \n",
     "\n",
     "sequence_length = 30\n",
     "label_map = {label: num for num, label in enumerate(actions)}\n",
     "\n",
-    "# Initialize MediaPipe Holistic\n",
+    "\n",
     "mp_holistic = mp.solutions.holistic\n",
     "\n",
-    "# Lists to hold the sequences and labels\n",
+    "\n",
     "sequences, labels = [], []\n",
     "\n",
-    "# Function to adjust brightness\n",
+    "\n",
     "def adjust_brightness(image, brightness=30):\n",
     "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
     "    h, s, v = cv2.split(hsv)\n",
@@ -323,25 +320,24 @@
     "    final_hsv = cv2.merge((h, s, v))\n",
     "    return cv2.cvtColor(final_hsv, cv2.COLOR_HSV2BGR)\n",
     "\n",
-    "# Function to apply augmentation\n",
     "def augment_image(image):\n",
     "    aug_images = []\n",
     "\n",
-    "    # Original image\n",
+    "   \n",
     "    aug_images.append(image)\n",
     "\n",
-    "    # Flip horizontally\n",
+    "   \n",
     "    aug_images.append(cv2.flip(image, 1))\n",
     "\n",
-    "    # Adjust brightness (brighter and darker)\n",
+    "    \n",
     "    aug_images.append(adjust_brightness(image, 30))\n",
     "    aug_images.append(adjust_brightness(image, -30))\n",
     "\n",
-    "    # Rotate the image by small angles\n",
+    "    \n",
     "    h, w = image.shape[:2]\n",
     "    center = (w // 2, h // 2)\n",
     "\n",
-    "    # Rotate by +10 degrees\n",
+    "    \n",
     "    M = cv2.getRotationMatrix2D(center, 10, 1.0)\n",
     "    aug_images.append(cv2.warpAffine(image, M, (w, h)))\n",
     "\n",
@@ -572,7 +568,7 @@
     "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
-    "# Build the model\n",
+    "\n",
     "model = Sequential()\n",
     "\n",
     "model.add(LSTM(256, return_sequences=True, input_shape=(180, 258),\n",
